// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PaymentMethodPicker should render Default 1`] = `
<DocumentFragment>
  <div
    class="MuiFormControl-root emotion-0 emotion-1"
  >
    <div
      class="MuiFormGroup-root MuiFormGroup-row emotion-2"
      id=":r0:"
      role="radiogroup"
    >
      <label
        class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd emotion-3"
      >
        <span
          aria-label="Mit Kreditkarte (Visa, Mastercard) Stripe"
          class="MuiButtonBase-root MuiRadio-root MuiRadio-colorPrimary PrivateSwitchBase-root MuiRadio-root MuiRadio-colorPrimary Mui-checked MuiRadio-root MuiRadio-colorPrimary emotion-4"
        >
          <input
            class="PrivateSwitchBase-input emotion-5"
            name=":r1:"
            type="radio"
            value="1234"
          />
          <span
            class="emotion-6"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-7"
              data-testid="RadioButtonUncheckedIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
              />
            </svg>
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-8"
              data-testid="RadioButtonCheckedIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root emotion-9"
          />
        </span>
        <div
          class="emotion-10 emotion-11"
        >
          <img
            alt="DSC07717"
            class="emotion-12 emotion-13"
            loading="lazy"
            sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
800w"
            srcset="https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
            title=""
          />
        </div>
        <span
          class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label emotion-14"
        />
      </label>
      <label
        class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd emotion-3"
      >
        <span
          aria-label="Mit TWINT, Paypal, Postfinance, usw. Payrexx"
          class="MuiButtonBase-root MuiRadio-root MuiRadio-colorPrimary PrivateSwitchBase-root MuiRadio-root MuiRadio-colorPrimary MuiRadio-root MuiRadio-colorPrimary emotion-4"
        >
          <input
            class="PrivateSwitchBase-input emotion-5"
            name=":r1:"
            type="radio"
            value="12345"
          />
          <span
            class="emotion-6"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-7"
              data-testid="RadioButtonUncheckedIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
              />
            </svg>
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-20"
              data-testid="RadioButtonCheckedIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root emotion-9"
          />
        </span>
        <div
          class="emotion-22 emotion-11"
        >
          <img
            alt="DSC07717"
            class="emotion-12 emotion-13"
            loading="lazy"
            sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
800w"
            srcset="https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
            title=""
          />
        </div>
        <span
          class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label emotion-14"
        />
      </label>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PaymentMethodPicker should render Selected 1`] = `
<DocumentFragment>
  <div
    class="MuiFormControl-root emotion-0 emotion-1"
  >
    <div
      class="MuiFormGroup-root MuiFormGroup-row emotion-2"
      id=":r2:"
      role="radiogroup"
    >
      <label
        class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd emotion-3"
      >
        <span
          aria-label="Mit Kreditkarte (Visa, Mastercard) Stripe"
          class="MuiButtonBase-root MuiRadio-root MuiRadio-colorPrimary PrivateSwitchBase-root MuiRadio-root MuiRadio-colorPrimary Mui-checked MuiRadio-root MuiRadio-colorPrimary emotion-4"
        >
          <input
            class="PrivateSwitchBase-input emotion-5"
            name=":r3:"
            type="radio"
            value="1234"
          />
          <span
            class="emotion-6"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-7"
              data-testid="RadioButtonUncheckedIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
              />
            </svg>
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-8"
              data-testid="RadioButtonCheckedIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root emotion-9"
          />
        </span>
        <div
          class="emotion-10 emotion-11"
        >
          <img
            alt="DSC07717"
            class="emotion-12 emotion-13"
            loading="lazy"
            sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
800w"
            srcset="https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
            title=""
          />
        </div>
        <span
          class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label emotion-14"
        />
      </label>
      <label
        class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd emotion-3"
      >
        <span
          aria-label="Mit TWINT, Paypal, Postfinance, usw. Payrexx"
          class="MuiButtonBase-root MuiRadio-root MuiRadio-colorPrimary PrivateSwitchBase-root MuiRadio-root MuiRadio-colorPrimary MuiRadio-root MuiRadio-colorPrimary emotion-4"
        >
          <input
            class="PrivateSwitchBase-input emotion-5"
            name=":r3:"
            type="radio"
            value="12345"
          />
          <span
            class="emotion-6"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-7"
              data-testid="RadioButtonUncheckedIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
              />
            </svg>
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-20"
              data-testid="RadioButtonCheckedIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root emotion-9"
          />
        </span>
        <div
          class="emotion-22 emotion-11"
        >
          <img
            alt="DSC07717"
            class="emotion-12 emotion-13"
            loading="lazy"
            sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
800w"
            srcset="https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
            title=""
          />
        </div>
        <span
          class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label emotion-14"
        />
      </label>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PaymentMethodPicker should render Single 1`] = `
<DocumentFragment>
  <div
    class="MuiFormControl-root emotion-0 emotion-1"
  >
    <div
      class="MuiFormGroup-root MuiFormGroup-row emotion-2"
      id=":r4:"
      role="radiogroup"
    >
      <label
        class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd emotion-3"
      >
        <span
          aria-label="Mit Kreditkarte (Visa, Mastercard) Stripe"
          class="MuiButtonBase-root MuiRadio-root MuiRadio-colorPrimary PrivateSwitchBase-root MuiRadio-root MuiRadio-colorPrimary Mui-checked MuiRadio-root MuiRadio-colorPrimary emotion-4"
        >
          <input
            class="PrivateSwitchBase-input emotion-5"
            name=":r5:"
            type="radio"
            value="1234"
          />
          <span
            class="emotion-6"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-7"
              data-testid="RadioButtonUncheckedIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
              />
            </svg>
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-8"
              data-testid="RadioButtonCheckedIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root emotion-9"
          />
        </span>
        <div
          class="emotion-10 emotion-11"
        >
          <img
            alt="DSC07717"
            class="emotion-12 emotion-13"
            loading="lazy"
            sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
800w"
            srcset="https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
            title=""
          />
        </div>
        <span
          class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label emotion-14"
        />
      </label>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PaymentMethodPicker should render WithClassName 1`] = `
<DocumentFragment>
  <div
    class="MuiFormControl-root extra-classname emotion-0 emotion-1"
  >
    <div
      class="MuiFormGroup-root MuiFormGroup-row emotion-2"
      id=":r6:"
      role="radiogroup"
    >
      <label
        class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd emotion-3"
      >
        <span
          aria-label="Mit Kreditkarte (Visa, Mastercard) Stripe"
          class="MuiButtonBase-root MuiRadio-root MuiRadio-colorPrimary PrivateSwitchBase-root MuiRadio-root MuiRadio-colorPrimary Mui-checked MuiRadio-root MuiRadio-colorPrimary emotion-4"
        >
          <input
            class="PrivateSwitchBase-input emotion-5"
            name=":r7:"
            type="radio"
            value="1234"
          />
          <span
            class="emotion-6"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-7"
              data-testid="RadioButtonUncheckedIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
              />
            </svg>
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-8"
              data-testid="RadioButtonCheckedIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root emotion-9"
          />
        </span>
        <div
          class="emotion-10 emotion-11"
        >
          <img
            alt="DSC07717"
            class="emotion-12 emotion-13"
            loading="lazy"
            sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
800w"
            srcset="https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
            title=""
          />
        </div>
        <span
          class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label emotion-14"
        />
      </label>
      <label
        class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd emotion-3"
      >
        <span
          aria-label="Mit TWINT, Paypal, Postfinance, usw. Payrexx"
          class="MuiButtonBase-root MuiRadio-root MuiRadio-colorPrimary PrivateSwitchBase-root MuiRadio-root MuiRadio-colorPrimary MuiRadio-root MuiRadio-colorPrimary emotion-4"
        >
          <input
            class="PrivateSwitchBase-input emotion-5"
            name=":r7:"
            type="radio"
            value="12345"
          />
          <span
            class="emotion-6"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-7"
              data-testid="RadioButtonUncheckedIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
              />
            </svg>
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-20"
              data-testid="RadioButtonCheckedIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root emotion-9"
          />
        </span>
        <div
          class="emotion-22 emotion-11"
        >
          <img
            alt="DSC07717"
            class="emotion-12 emotion-13"
            loading="lazy"
            sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
800w"
            srcset="https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
            title=""
          />
        </div>
        <span
          class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label emotion-14"
        />
      </label>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PaymentMethodPicker should render WithEmotion 1`] = `
<DocumentFragment>
  <div
    class="MuiFormControl-root emotion-0 emotion-1"
  >
    <div
      class="MuiFormGroup-root MuiFormGroup-row emotion-2"
      id=":r8:"
      role="radiogroup"
    >
      <label
        class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd emotion-3"
      >
        <span
          aria-label="Mit Kreditkarte (Visa, Mastercard) Stripe"
          class="MuiButtonBase-root MuiRadio-root MuiRadio-colorPrimary PrivateSwitchBase-root MuiRadio-root MuiRadio-colorPrimary Mui-checked MuiRadio-root MuiRadio-colorPrimary emotion-4"
        >
          <input
            class="PrivateSwitchBase-input emotion-5"
            name=":r9:"
            type="radio"
            value="1234"
          />
          <span
            class="emotion-6"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-7"
              data-testid="RadioButtonUncheckedIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
              />
            </svg>
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-8"
              data-testid="RadioButtonCheckedIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root emotion-9"
          />
        </span>
        <div
          class="emotion-10 emotion-11"
        >
          <img
            alt="DSC07717"
            class="emotion-12 emotion-13"
            loading="lazy"
            sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
800w"
            srcset="https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
            title=""
          />
        </div>
        <span
          class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label emotion-14"
        />
      </label>
      <label
        class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd emotion-3"
      >
        <span
          aria-label="Mit TWINT, Paypal, Postfinance, usw. Payrexx"
          class="MuiButtonBase-root MuiRadio-root MuiRadio-colorPrimary PrivateSwitchBase-root MuiRadio-root MuiRadio-colorPrimary MuiRadio-root MuiRadio-colorPrimary emotion-4"
        >
          <input
            class="PrivateSwitchBase-input emotion-5"
            name=":r9:"
            type="radio"
            value="12345"
          />
          <span
            class="emotion-6"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-7"
              data-testid="RadioButtonUncheckedIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
              />
            </svg>
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-20"
              data-testid="RadioButtonCheckedIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root emotion-9"
          />
        </span>
        <div
          class="emotion-22 emotion-11"
        >
          <img
            alt="DSC07717"
            class="emotion-12 emotion-13"
            loading="lazy"
            sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
800w"
            srcset="https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
            title=""
          />
        </div>
        <span
          class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label emotion-14"
        />
      </label>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PaymentMethodPicker should render WithError 1`] = `
<DocumentFragment>
  <div
    class="MuiFormControl-root emotion-0 emotion-1"
  >
    <div
      class="MuiFormGroup-root MuiFormGroup-row emotion-2"
      id=":ra:"
      role="radiogroup"
    >
      <label
        class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd emotion-3"
      >
        <span
          aria-label="Mit Kreditkarte (Visa, Mastercard) Stripe"
          class="MuiButtonBase-root MuiRadio-root MuiRadio-colorPrimary PrivateSwitchBase-root MuiRadio-root MuiRadio-colorPrimary Mui-checked MuiRadio-root MuiRadio-colorPrimary emotion-4"
        >
          <input
            class="PrivateSwitchBase-input emotion-5"
            name=":rb:"
            type="radio"
            value="1234"
          />
          <span
            class="emotion-6"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-7"
              data-testid="RadioButtonUncheckedIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
              />
            </svg>
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-8"
              data-testid="RadioButtonCheckedIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root emotion-9"
          />
        </span>
        <div
          class="emotion-10 emotion-11"
        >
          <img
            alt="DSC07717"
            class="emotion-12 emotion-13"
            loading="lazy"
            sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
800w"
            srcset="https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
            title=""
          />
        </div>
        <span
          class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label emotion-14"
        />
      </label>
      <label
        class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd emotion-3"
      >
        <span
          aria-label="Mit TWINT, Paypal, Postfinance, usw. Payrexx"
          class="MuiButtonBase-root MuiRadio-root MuiRadio-colorPrimary PrivateSwitchBase-root MuiRadio-root MuiRadio-colorPrimary MuiRadio-root MuiRadio-colorPrimary emotion-4"
        >
          <input
            class="PrivateSwitchBase-input emotion-5"
            name=":rb:"
            type="radio"
            value="12345"
          />
          <span
            class="emotion-6"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-7"
              data-testid="RadioButtonUncheckedIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
              />
            </svg>
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-20"
              data-testid="RadioButtonCheckedIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root emotion-9"
          />
        </span>
        <div
          class="emotion-22 emotion-11"
        >
          <img
            alt="DSC07717"
            class="emotion-12 emotion-13"
            loading="lazy"
            sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
800w"
            srcset="https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
            title=""
          />
        </div>
        <span
          class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label emotion-14"
        />
      </label>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PaymentMethodPicker should render WithLoading 1`] = `
<DocumentFragment>
  <div
    class="MuiFormControl-root emotion-0 emotion-1"
  >
    <div
      class="MuiFormGroup-root MuiFormGroup-row emotion-2"
      id=":rc:"
      role="radiogroup"
    >
      <label
        class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd emotion-3"
      >
        <span
          aria-label="Mit Kreditkarte (Visa, Mastercard) Stripe"
          class="MuiButtonBase-root MuiRadio-root MuiRadio-colorPrimary PrivateSwitchBase-root MuiRadio-root MuiRadio-colorPrimary Mui-checked MuiRadio-root MuiRadio-colorPrimary emotion-4"
        >
          <input
            class="PrivateSwitchBase-input emotion-5"
            name=":rd:"
            type="radio"
            value="1234"
          />
          <span
            class="emotion-6"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-7"
              data-testid="RadioButtonUncheckedIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
              />
            </svg>
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-8"
              data-testid="RadioButtonCheckedIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root emotion-9"
          />
        </span>
        <div
          class="emotion-10 emotion-11"
        >
          <img
            alt="DSC07717"
            class="emotion-12 emotion-13"
            loading="lazy"
            sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
800w"
            srcset="https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
            title=""
          />
        </div>
        <span
          class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label emotion-14"
        />
      </label>
      <label
        class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd emotion-3"
      >
        <span
          aria-label="Mit TWINT, Paypal, Postfinance, usw. Payrexx"
          class="MuiButtonBase-root MuiRadio-root MuiRadio-colorPrimary PrivateSwitchBase-root MuiRadio-root MuiRadio-colorPrimary MuiRadio-root MuiRadio-colorPrimary emotion-4"
        >
          <input
            class="PrivateSwitchBase-input emotion-5"
            name=":rd:"
            type="radio"
            value="12345"
          />
          <span
            class="emotion-6"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-7"
              data-testid="RadioButtonUncheckedIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
              />
            </svg>
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-20"
              data-testid="RadioButtonCheckedIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root emotion-9"
          />
        </span>
        <div
          class="emotion-22 emotion-11"
        >
          <img
            alt="DSC07717"
            class="emotion-12 emotion-13"
            loading="lazy"
            sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
800w"
            srcset="https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
            title=""
          />
        </div>
        <span
          class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label emotion-14"
        />
      </label>
    </div>
  </div>
</DocumentFragment>
`;
